--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -187,7 +187,7 @@ random field approach for mining haul roads}. Joint work with David Godoy and To
 
 \cvitem{5.}{\textit{Drift parameter identification for the Ornstein-Uhlenbeck process driven by  Ornstein-Uhlenbeck with  small  General Gaussian  noise}. Joint work with Héctor Araya and Francisco Plaza-Vega. \newline \textbf{Status:} Manuscript in Final Preparation.}
 
-\cvitem{6.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías and Kerlyns Martínez. \newline \textbf{Status:} Early Stage - Preliminary Results and Draft Development.}
+\cvitem{6.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías, Kerlyns Martínez and Alexis Alfaro. \newline \textbf{Status:} Early Stage - Preliminary Results and Draft Development.}
 
 \cvitem{7.}{\textit{Gumbel Spatial Copula}. Joint work with Moreno Bevilacqua and Christian Caamaño-Carrillo. \newline \textbf{Status:} Early Stage - Developing Theoretical Results.}
 
@@ -235,7 +235,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \section{Academic Service}
 
-\cvitem{2024 -- 2024}{Scientific Committee Member, \emph{Jornadas Chilenas de Estadística 2024}, organised by the \href{https://www.soche.cl}{Chilean Statistical Society}.}
+\cvitem{2024 -- 2024}{Scientific Committee Member, XLVII National Conference on Statistics, organised by the \href{https://www.soche.cl}{Chilean Statistical Society}.}
 
 \cvitem{2024 -- \hfill}{Internship Coordinator, Department of Industries, Campus Vitacura, \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}.}
 
