--- a/cv_en/publications.bib
+++ b/cv_en/publications.bib
@@ -5,12 +5,18 @@
   year    = {2025},
 }
 
-@Article{Alvarado_LAJAR,
+@Article{Alvarado2025LAJAR,
   author  = {Alvarado, Eloy and Plaza-Vega, Francisco and Montenegro, Carlos and Saavedra, Oscar},
-  journal = {Latin American Journal of Aquatic Research (Accepted)},
   title   = {Deep learning-based classification of species in central-southern fisheries in Chile},
+  journal = {Latin American Journal of Aquatic Research},
   year    = {2025},
+  volume  = {53},
+  number  = {3},
+  pages   = {411--424},
+  doi     = {10.3856/vol53-issue3-fulltext-3318},
+  issn    = {0718-560X}
 }
+
 
 @article{BEVILACQUA2024105277,
 title = {A flexible Clayton-like spatial copula with application to bounded support data},
