Update CV sections and content
Renamed 'Advising' section to 'Students' and adjusted section numbering for 'Scientific Events' and 'References'. Minor LaTeX command changes for babel auxiliary handling. Updated CV content in cv_en.tex.

--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -211,6 +211,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 % UNAB
 \cvitem{}{\href{https://www.unab.cl/}{\textbf{\textsc{Universidad Andrés Bello}}}}
+\cvitem{\texttt{CIND211}}{Stochastic Networks and Systems. \hfill \textit{Taught in 2025/02}}
 \cvitem{\texttt{ATDFI102}}{Introduction to programming. \hfill \textit{Taught in 2024/01,2025/01}}
 \cvitem{\texttt{CIND217}}{Business intelligence. \hfill \textit{Taught in 2024/01, 2025/01}}
 \cvitem{\texttt{IICGP01}}{Business intelligence. \hfill \textit{Taught in 2023/02}}
@@ -241,13 +242,20 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 
 \cvitem{2024 -- \hfill}{Member of the academic committee for the development of a new undergraduate program: Bachelor's Degree in Data Science, \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}.}
 
-\section{Advising}
+\section{Students}
+\cvitem{2025}{José Donoso. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+\cvitem{2025}{Wilson Godoy. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+\cvitem{2025}{Isadora Araya. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+\cvitem{2025}{Gabriela Estrada. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+\cvitem{2025}{Fernanda Pincheira. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+\cvitem{2025}{Benjamín Mardones. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
+\cvitem{2024}{Luis Riquelme. Master in Mathematics.\href{https://dmat.ciencias.ubiobio.cl/}{Universidad del Bío-Bío}. Co-Advisor.}
 \cvitem{2024}{Cristóbal Retamal. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
 \cvitem{2024}{Nicolás Bravo. Industrial Engineering. \href{https://www.industrias.usm.cl/}{Universidad Técnica Federico Santa María}. Advisor.}
 \cvitem{2023}{Ricardo Menares. Statistics and Data Science Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
 \cvitem{2022}{Cristóbal Collao. Statistical Engineering. \href{https://www.uv.cl/}{Universidad de Valparaíso}. Co-advisor.}
 
-
+\newpage
 \section{Scientific Events}
 
 \cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Conference on Geostatistics and Spatio-Temporal Statistics: Theory and Applications. Organizer:\href{https://www.usm.cl}{Universidad Técnica Federico Santa María}}
@@ -272,7 +280,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: May 2025}
+\textit{Updated: Aug 2025}
 
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
