--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -185,7 +185,7 @@ random field approach for mining haul roads}. Joint work with David Godoy and To
 
 \cvitem{4.}{\textit{Non-Standard Profit Efficiency in Banking: A copula approach}. Joint work with Vivian Cruz and Fernando Díaz. \newline \textbf{Status:} Manuscript Draft Completed - Final Estimation in Progress.}
 
-\cvitem{5.}{\textit{Drift parameter identification for the Ornstein-Uhlenbeck process driven by  Ornstein-Uhlenbeck with  small  General Gaussian  noise}. Joint work with Héctor Araya and Francisco Plaza-Vega. \newline \textbf{Status:} Manuscript in Final Preparation.}
+\cvitem{5.}{\textit{Drift parameter identification for the Ornstein-Uhlenbeck process driven by  Ornstein-Uhlenbeck with  small  General Gaussian  noise}. Joint work with Héctor Araya and Francisco Plaza-Vega. \newline \textbf{Status:} Under Review.}
 
 \cvitem{6.}{\textit{A CAPM Approach with Stable Error Distributions: Application to Brazilian Market Dynamics}. Joint work with María Elisa Farías, Kerlyns Martínez and Alexis Alfaro. \newline \textbf{Status:} Early Stage - Preliminary Results and Draft Development.}
 
