--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -153,11 +153,11 @@ Office: A-293\\
 \cvitemwithcomment{2013 -- 2015}{B.Sc in Statistical Science, \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}{Valparaíso, Chile.}
 \cvitemwithcomment{2014}{Exchange program in \href{http://www.korea.ac.kr}{Korea University}}{Seoul, South Korea}
 
-\section{Languages}
-\cvitem{Spanish}{Native Speaker}
-\cvitem{English}{Full professional proficiency, \href{https://www.ets.org/toefl.html}{TOEFL iBT} 90 (November, 2015)}
-\cvitem{French}{Beginner A1, \href{https://www.institutofrances.cl}{Institut Français}}
-\cvitem{Korean}{Beginner A2, \href{https://www.korea.edu/}{Korea University}}
+%\section{Languages}
+%\cvitem{Spanish}{Native Speaker}
+%\cvitem{English}{Full professional proficiency, \href{https://www.ets.org/toefl.html}{TOEFL iBT} 90 (November, 2015)}
+%\cvitem{French}{Beginner A1, \href{https://www.institutofrances.cl}{Institut Français}}
+%\cvitem{Korean}{Beginner A2, \href{https://www.korea.edu/}{Korea University}}
 
 
 
@@ -258,6 +258,8 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \newpage
 \section{Scientific Events}
 
+\cvitem{Sep 2025}{\textit{``Non-Standard Profit Efficiency in Banking: A Copula Approach''}. Campus Vitacura Colloquium. Organizer: \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}}
+\cvitem{Mar 2025}{\textit{``2nd Workshop: Reproducible Research with R''}. Open Science Webinar USM. Organizer: \href{https://www.usm.cl}{Universidad Técnica Federico Santa María}}
 \cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Conference on Geostatistics and Spatio-Temporal Statistics: Theory and Applications. Organizer:\href{https://www.usm.cl}{Universidad Técnica Federico Santa María}}
 \cvitem{Nov 2024}{\textit{``Weibull random fields through Clayton spatial copula An application to mining haul roads''}. III Statistical Engineering Conference. Organizer: \href{https://www.usach.cl}{Universidad de Santiago de Chile}}
 \cvitem{Oct 2024}{\textit{``Archimedean-like spatial copulas''}. XLVII National Conference on Statistics. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
@@ -267,7 +269,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \cvitem{Jul 2024}{\textit{``Archimedean-like spatial copulas and their applications''}. Colloquium on Statistics and Data Science. Organizer: \href{https://www.uc.cl/}{Pontificia Universidad Católica de Chile}}
 \cvitem{Nov 2023}{\textit{``Tools and Strategies for Reproducible Research''}. 3rd Open Science Webinar USM. Organizer: \href{https://www.usm.cl/}{Universidad Técnica Federico Santa María}}
 \cvitem{Oct 2023}{\textit{``AI-based Feedback for Engineering Students''}. XXXV Chilean Congress of Engineering Education. Organizer: \href{https://www.sochedi.cl}{Chilean Society of Engineering Education}}
-\cvitem{Dec 2022}{\textit{``A flexible clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
+\cvitem{Dec 2022}{\textit{``A flexible Clayton-like spatial copula with application to bounded support data''}. III Statistics Workshop: Graduate Contributions and Scientific initiation. Organizer: \href{https://www.soche.cl}{Chilean Statistical Society}}
 \cvitem{Oct 2015}{\textit{``Stochastics differential equations in mathematical finance: The Black-Scholes Model''}. XXI Valparaíso Statistical Week. \href{https://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}}
 
 
@@ -280,7 +282,7 @@ of the COVID-19 pandemic in the Chilean population, ANID, Reference No. COVID076
 \href{mailto:carlos.montenegro@ifop.cl}{\texttt{carlos.montenegro@ifop.cl}}}
 
 \vfill
-\textit{Updated: Aug 2025}
+\textit{Updated: Sep 2025}
 
 % Publications from a BibTeX file using the multibib package
 %\section{Publications}
